--- a/src/styles/config/_css-variables.scss
+++ b/src/styles/config/_css-variables.scss
@@ -3,7 +3,7 @@
 :root {
 	--font-family: "Roboto", sans-serif;
 	--ff-primary: 'Roboto', sans-serif;
-	--ff-secondary: 'Anton', sans-serif;
+	--ff-secondary: 'Roboto', sans-serif;
 	--f-font-size: #{rem(18)};
 	--f-font-size-mobile: #{rem(16)};
 	--f-font-weight: 400;
@@ -14,15 +14,15 @@
 	--accent-color: var(--c-purple);
 	--hover-color: var(--c-scrollUp);
 	--hover-background: var(--c-scrollUp);
-	--c-scrollUp: #C084FC;
+	--c-scrollUp: #966749;
 
 	--c-white: #FFFFFF;
 	--c-purple: #9333EA;
 	--c-bg-body: #edf0f5;
 	--c-lightgrey: #B2B2B9;
 	--c-dark: #0F172A;
-	--c-orange: #c2410c;
-	--c-pink: #FF285B;
+	--c-orange: #e89f71;
+	--c-pink: #e97171;
 	--c-black: #{rgba(#000, 10%)}; 
 	
 	--transition: 0.3s ease 0s;
