--- a/src/styles/config/_fonts.scss
+++ b/src/styles/config/_fonts.scss
@@ -9,7 +9,7 @@
 }
 
 $fontPrimary: "Montserrat";
-$fontSecondary: "";
+$fontSecondary: "Anton";
 
 //@include font-woff2($fontPrimary, "../assets/fonts/#{$fontPrimary}-Thin", 100, normal);
 //@include font-woff2($fontPrimary, "../assets/fonts/#{$fontPrimary}-ExtraLight", 200, normal);
