--- a/src/styles/blocks/_products.scss
+++ b/src/styles/blocks/_products.scss
@@ -2,85 +2,15 @@
 @use "../config/mixins" as *;
 
 .products {
-
+  @include adaptive-clamp("padding-top", 60, 20);
+  @include adaptive-clamp("padding-bottom", 60, 20);
   &__container {
   }
-
-  &__inner {
-  }
-
   &__list {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));  
   }
-
   &__item {
   }
-}
-
-.product {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  padding: 16px 10px;
-  border: 1px solid #000;
-  text-align: center;
-  &__link {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-  }
-
-  &__image {
-    width: 100%;
-    aspect-ratio: 4 / 3;
-    overflow: hidden;
-  }
-
-  &__img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    display: block;
-  }
-
-  &__description {
-  }
-
-  &__title {
-    font-weight: 500;
-    font-size: 20px;
-    &:not(:last-child) {
-      margin-bottom: 10px;
-    }
-  }
-
-  &__text {
-    font-size: 16px;
-  }
-
-  &__price {
-  }
-
-  &__price-span {
-  }
-
-  &__buy-btn {
-  }
-}
-.js-product {
-}
-.js-link-card {
-}
-.js-image-card {
-}
-.js-title-card {
-}
-.js-price-card {
-}
-.js-buy-button {
-}
-.js-products-list {
 }
