--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
  @use 'blocks/footer';
 // @use 'blocks/hero';
 // @use 'blocks/second';
+@use 'blocks/article';
 
 @use 'blocks/cart-modal';
 @use 'blocks/products';
